AngularJs ES6 Way

--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -9,7 +9,7 @@ footer(ng-show="logStats")
   #console
     #title
       span(translate="LOG")
-      button.tooltip(ng-click="clearLog()")
+      button.tooltip(ng-click="main.clearLog()")
         i.fa.fa-trash-o
         span.tooltiptext(translate="LOG_CLEAR")
     #log
