--- a/src/app/app.css
+++ b/src/app/app.css
@@ -3,11 +3,32 @@ html, body {
   height: 100px;
   padding: 0;
   margin: 0;
-  background-color: #2a2a2a;
+  background-color: #faf9f8;
+}
+
+.header {
+  height: 60px;
+  background-color: white;
+  padding-top: 7px;
 }
 
 .editor {
-  float: right;
-  width: 250px;
-  height: 100%;
+  position: fixed;
+  top: 61px;
+  right: 0;
+  bottom: 50px;
+  width: 350px;
+  background-color: white;
+  z-index: 9999;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  background-color: white;
+  padding-top: 5px;
+  padding-left: 10px;
 }
