--- a/src/app/layout/simulator.css
+++ b/src/app/layout/simulator.css
@@ -21,28 +21,29 @@
 
 .dataBus, .addressBus {
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 0;
   bottom: 0;
-  left: 12px;
+  left: 15px;
   float: center;
   margin: 0 auto;
 
   width: 100%;
   height: 100% !important;
-  fill: #fa983a;
+  fill: #ddd;
 
   overflow-y: hidden;
 }
 
 .addressBus {
+  fill: #999;
 }
 
 /* program counter */
 #pc {
-  position: relative;
-  top: 15%;
-  left: 75%;
+  position: absolute;
+  top: 14%;
+  left: 65%;
   width: 125px;
   height: 200px;
 
@@ -72,7 +73,7 @@
   width: 350px;
   height: 400px;
   svg {
-    fill: #1f1f1f;
+    fill: white;
     stroke: #ccc;
     stroke-width: 1;
     width: 400px;
