--- a/src/app/layout/ram/ram.css
+++ b/src/app/layout/ram/ram.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
+  bottom: 105px;
   width: 100%;
   display: flex;
   flex-direction: row;
