--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,37 @@
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  color-scheme: var(--color-scheme);
+}
+
+::selection {
+  color: var(--white);
+  background: var(--black);
+}
+
+html, body {
+  width: 100%;
+  height: 100% !important;
+}
+
+body {
+  overflow-x: auto;
+  font-weight: 100;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  margin: 0;
+  font-family: Verdana, Geneva, sans-serif;
+  letter-spacing: .5px;
+  overflow: hidden;
+}
+
+pre {
+  margin: 0;
+}
+
 .gutter {
   background-color: var(--white);
   background-repeat: no-repeat;
