--- a/src/app/layout/ram/ram.module.css
+++ b/src/app/layout/ram/ram.module.css
@@ -1,16 +1,15 @@
 .split {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 105px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
 }
 
 .CodeMirror {
   height: 100%;
-  border-right: 1px solid var(--neutralLight);
   font-size: 14px;
   line-height: 1.5;
 }
